# Recotrans

./: .gitignore  .gitmodules  CMakeLists.txt  LyricWidget.cpp  LyricWidget.h  audio.cpp  audio.h  floatingWindow.cpp  floatingWindow.h  inference.cpp  inference.h  lyric.cpp  main.cpp  readme.md  stream.cpp  stream.h  stringgenerator.cpp  stringgenerator.h
.github/workflows/: android.yml  cmake-multi-platform.yml  macos.yml  ubuntu.yml  windows.yml
submodules/rtaudio/: RtAudio.cpp  RtAudio.h
submodules/rtaudio/include/: asio.cpp
trans_model/: readme.md
